--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header nav{
     justify-content: space-around;
 }
 
-header div{
+header nav div{
     display: flex;
     align-items: center;
 }
@@ -165,6 +165,40 @@ header nav ul li{
     height: calc(100vh - 135px - 69px);
 }
 
+.historia h2{
+    font-size: 80px;
+}
+
+.historia{
+    color: #2c88d9;
+}
+
+.historia div{
+    display: flex;
+    justify-content: center;
+}
+.historia div p{
+    display: flex;
+    align-items: center;
+}
+
+.historia div img{
+    width: 450px;
+}
+
+.ubicacion{
+    display: flex;
+    justify-content: center;
+    color: #2c88d9;
+
+    margin-bottom: 20px;
+}
+
+.ubicacion div{
+    width: 250px;
+}
+
+
 /* Vender */
 
 
@@ -192,9 +226,13 @@ header nav ul li{
 /* ---------- FOOTER ----------- */
 
 footer{
+    display: flex;
     width: 100%;
-    height: 500px; /* a cambiar */
+    height: 200px; /* a cambiar */
     background-color: #2c88d9;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
 }
 
 footer div img{
@@ -204,11 +242,16 @@ footer div img{
     margin: 10px;
 }
 
-.redes{
-    text-align: right;
-    padding: 10px;
+
+.info ul{
+    list-style: none;
+    text-align: center;
 }
 
+.info ul li a{
+    text-decoration: none;
+    color: white;
+}
 
 /* Media querie */
 
@@ -232,5 +275,55 @@ footer div img{
     .grid-tem{
         grid-column: span 1;
         grid-row: 1;
+    }
+}
+
+@media screen and (max-width: 810px){
+    header nav{
+        flex-direction: column;
+    }
+    header nav div{
+        justify-content: center;
+    }
+
+    header nav ul{
+        justify-content: center;
+    }
+
+    .hero div h2{
+        width: 344px;
+        font-size: 51px;
+    }
+}
+
+@media screen and (max-width: 954px){
+    .historia{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .historia h2{
+        font-size: 50px;
+    }
+    .historia div img{
+        width: 140px;
+        height: 100px;
+    }
+
+    .historia div{
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 652px){
+    .ubicacion{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .map{
+        display: none;
     }
 }
