--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,11 @@ header nav ul li a:hover{
     padding-right: 20rem;
 }
 
+.ofertas{
+    color:#2c88d9;
+}
+
+
 .grid-galeria{
     width: 100%;
     margin-top: 50px;
