--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ header nav{
     top: 0;
     display: flex;
     justify-content: space-around;
+
+    height: 87px; /* bootstrap  me lo rompe sino lo pongo */
 }
 
 header nav div{
@@ -30,6 +32,8 @@ header img{
 header h1{
     color: white;
     font-weight: 700;
+    font-size: 24px; /* bootstrap  me lo rompe sino lo pongo */
+    margin-bottom: 0px; /* bootstrap  me lo rompe sino lo pongo */
 }   
 
 header nav ul{
@@ -39,6 +43,9 @@ header nav ul{
     text-align: right;
     display: flex;
     align-items: center;
+
+    margin: 0px;
+    padding: 0px;
 }
 
 header nav ul li a{
@@ -79,6 +86,7 @@ header nav ul li a:hover{
     border: 10px solid white;
     border-radius: 10px;
     text-align: center;
+    font-weight: bold; /* bootstrap  me lo rompe sino lo pongo */
 
     width: 800px;
 }
@@ -104,6 +112,21 @@ header nav ul li a:hover{
     -moz-box-shadow: 5px 5px 33px -9px rgba(0,0,0,0.9);
     transition: 1s;
 }
+
+.productos .tarjetas .card a{
+    width: 78.75px;
+    height: 30px;
+}
+
+.card__texto{
+    font-size: 18.72px;
+    font-weight: bold;
+}
+
+.productos .tarjetas .card{
+    align-items: center;
+}
+
 
 .productos .tarjetas div:hover{
     transform: scale(1.1) ;
@@ -301,6 +324,7 @@ footer div img{
 @media screen and (max-width: 810px){
     header nav{
         flex-direction: column;
+        height: 120px;
     }
     header nav div{
         justify-content: center;
