--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,19 +160,40 @@ main {
       border-color: #2c88d9; }
 
 /* ---------- FOOTER ----------- */
+footer {
+  display: flex;
+  width: 100%;
+  height: 200px;
+  /* a cambiar */
+  background-color: #2c88d9;
+  align-items: center;
+  justify-content: space-around;
+  color: white; }
+  footer .redes a img {
+    width: 25px;
+    height: 25px;
+    margin-bottom: 10px;
+    margin: 10px; }
+  footer .info ul {
+    list-style: none;
+    text-align: center; }
+    footer .info ul li a {
+      text-decoration: none;
+      color: white; }
+
 /* Media querie */
 @media screen and (max-width: 890px) {
-  .grid-galeria {
+  main .grid-galeria {
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 220px; }
-  .grid-item {
+  main .grid-galeria .grid-item {
     grid-column: span 1;
     grid-row: span 1; } }
 
 @media screen and (max-width: 450px) {
-  .grid-galeria {
+  main .grid-galeria {
     grid-template-columns: 1fr; }
-  .grid-tem {
+  main .grid-galeria .grid-tem {
     grid-column: span 1;
     grid-row: 1; } }
 
@@ -189,22 +210,22 @@ main {
     font-size: 51px; } }
 
 @media screen and (max-width: 954px) {
-  .historia {
+  main .historia {
     display: flex;
     flex-wrap: wrap; }
-  .historia h2 {
+  main .historia h2 {
     font-size: 50px; }
-  .historia div img {
+  main .historia div img {
     width: 140px;
     height: 100px; }
-  .historia div {
+  main .historia div {
     flex-direction: column; } }
 
 @media screen and (max-width: 652px) {
-  .ubicacion {
+  main .ubicacion {
     display: flex;
     flex-direction: column; } }
 
 @media screen and (max-width: 600px) {
-  .map {
+  footer .map {
     display: none; } }
