--- a/scss/base/_media_query.scss
+++ b/scss/base/_media_query.scss
@@ -2,23 +2,23 @@
 /* Media querie */
 
 @media screen and (max-width: 890px){
-    .grid-galeria{
+    main .grid-galeria{
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 220px;
     }
 
-    .grid-item{
+    main .grid-galeria .grid-item{
         grid-column: span 1;
         grid-row: span 1;
     }
 }
 
 @media screen and (max-width: 450px){
-    .grid-galeria{
+    main .grid-galeria{
         grid-template-columns: 1fr;
     }
 
-    .grid-tem{
+    main .grid-galeria .grid-tem{
         grid-column: span 1;
         grid-row: 1;
     }
@@ -44,33 +44,33 @@
 }
 
 @media screen and (max-width: 954px){
-    .historia{
+    main .historia{
         display: flex;
         flex-wrap: wrap;
     }
 
-    .historia h2{
+    main .historia h2{
         font-size: 50px;
     }
-    .historia div img{
+    main .historia div img{
         width: 140px;
         height: 100px;
     }
 
-    .historia div{
+    main .historia div{
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 652px){
-    .ubicacion{
+    main .ubicacion{
         display: flex;
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 600px){
-    .map{
+    footer .map{
         display: none;
     }
 }
