--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,3 +1,37 @@
-
 /* ---------- FOOTER ----------- */
 
+footer {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    /* a cambiar */
+    background-color: #2c88d9;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
+
+    .redes {
+        a {
+            img {
+                width: 25px;
+                height: 25px;
+                margin-bottom: 10px;
+                margin: 10px;
+            }
+        }
+    }
+
+    .info {
+        ul {
+            list-style: none;
+            text-align: center;
+
+            li {
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+    }
+}
