--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,3 +1,5 @@
+@import "../base/variables";
+
 /* ---------- FOOTER ----------- */
 
 footer {
@@ -5,7 +7,7 @@ footer {
     width: 100%;
     height: 200px;
     /* a cambiar */
-    background-color: #2c88d9;
+    background-color: $color-principal;
     align-items: center;
     justify-content: space-around;
     color: white;
