--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,3 +1,5 @@
+@import "../base/variables";
+
 /* ---------- MAIN ----------- */
 
 main {
@@ -35,7 +37,7 @@ main {
 
     .productos {
         h2 {
-            color: #2c88d9;
+            color: $color-principal;
             margin-top: 10px;
             margin-left: 20px;
         }
@@ -48,7 +50,7 @@ main {
 
             .card {
                 text-align: center;
-                border: 3px solid #2c88d9;
+                border: 3px solid $color-principal;
                 border-radius: 15px;
 
                 margin: 20px;
@@ -67,8 +69,7 @@ main {
                 }
 
                 img {
-                    width: 250px;
-                    height: 300px;
+                    @include wae (250px, 300px);
                     border-radius: 15px 15px 0 0;
                 }
 
@@ -83,14 +84,14 @@ main {
                     height: 30px;
 
                     text-decoration: none;
-                    background-color: #2c88d9;
+                    background-color: $color-principal;
                     color: white;
                     padding: 5px 10px 5px 10px;
                     border-radius: 10px;
                     transition: 0.5s;
 
                     &:hover {
-                        background-color: blue;
+                        background-color: $color-transition;
                     }
                 }
             }
@@ -99,7 +100,7 @@ main {
 
     .ofertas {
         h2 {
-            color: #2c88d9;
+            color: $color-principal;
         }
     }
 
@@ -138,15 +139,14 @@ main {
     /* Vender y contacto*/
 
     .formGeneral {
-        display: flex;
-        justify-content: center;
+        @include flex (flex, center);
 
         .formulario {
-            color: #2c88d9;
+            color: $color-principal;
             width: 400px;
             margin: 30px 0px 30px 0px;
             text-align: center;
-            border: 3px solid #2c88d9;
+            border: 3px solid $color-principal;
             border-radius: 5px;
 
             h2 {
@@ -159,7 +159,7 @@ main {
                     width: 90%;
                     margin: 2px;
                     border-radius: 5px;
-                    border-color: #2c88d9;
+                    border-color: $color-principal;
                 }
 
                 .botones {
@@ -172,15 +172,14 @@ main {
     /* Nosotros*/
 
     .historia {
-        color: #2c88d9;
+        color: $color-principal;
 
         h2 {
             font-size: 80px;
         }
 
         div {
-            display: flex;
-            justify-content: center;
+            @include flex (flex, center);
 
             img {
                 width: 450px;
@@ -194,9 +193,8 @@ main {
     }
 
     .ubicacion {
-        display: flex;
-        justify-content: center;
-        color: #2c88d9;
+        @include flex (flex, center);
+        color: $color-principal;
 
         margin-bottom: 20px;
 
